--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ a {
 
 @media only screen and (max-width: 700px){
     #content {width: 100%}
-    ul li {
-        font-size: 10px;
+    #top p {
+        display: none;
     } 
 }
